--- a/DiyanetNamazVakti.Api/appsettings.json
+++ b/DiyanetNamazVakti.Api/appsettings.json
@@ -10,8 +10,8 @@
     "ApiUri": "https://awqatsalah.diyanet.gov.tr/",
     "TokenLifetimeMinutes": "45",
     "RefreshTokenLifetimeMinutes": "15",
-    "UserName": "",
-    "Password": ""
+    "UserName": "info@dobi.mk",
+    "Password": "7gZ+G4-s"
   },
 
   "MyApiClientSettings": {
